companygonj easy shop site

--- a/index.html
+++ b/index.html
@@ -5,12 +5,116 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Easy Shop</title>
-    <a href="style.css"></a>
+    <title>Companiganj Easy Shop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="sec">
 
+        <div class="half-width">
+
+            <h1>Get 100% Original</h1>
+            <h1> <span class="orange-color">Rajshai Mangoes</span> From <span class="blue-color">Companiganj Easy
+                    Shop</span> </h1>
+            <h2>We are providing 100% authentic and organic product all arond Bangladesh.</h2>
+            <P>
+                Get original taste of Rajshai Mangoes from your home. So, what are you thinking??? Just press the order
+                button and enjoy the mangoes. You will get your mangoes within 24 hours. </P>
+            <a class="order-button" target="_blank" href="https://www.facebook.com/groups/396716088155108">ORDER NOW</a>
+        </div>
+        <div class="half-width">
+            <div class=""><img src="images/headerpic.png" alt=""></div>
+
+    </section>
+
+    <section class="second sec">
+        <div id="person-img" class="half-width">
+
+            <img src="images/Person Image.png" alt="">
+        </div>
+        <div class="ceo-sec">
+
+            <h1>Tahmina Yasmin</h1>
+            <h2>CEO of Companiganj Easy Shop</h2>
+            <p> Hello Good People!
+                Hope you are safe in this situation. It is very risky to go outside in this covid situation. No need to
+                worry! We are here to help you. You can order any product from our website. Our team will send your
+                product within 2 hours. You will get your product within 24 hours.
+                Thank You All.
+
+            </p>
+            <a class="order-button" target="_blank" href="https://www.freelancer.com/u/Razaulevan">CONTACT ME</a>
+        </div>
+
+
+    </section>
+    <section>
+
+        <div class="other-priducts">
+            <h1>Our Other Products</h1>
+            <p>We are also selling some other products as well.</p>
+            <p>You can can order these authentic products from the
+                following links.</p>
+        </div>
+        <div class="sec">
+
+            <div class="products-sec p2">
+                <img src="images/Project Cover5.png" alt="">
+                <h1>Fresh Vegetables</h1>
+                <p>Fresh vegetables have a specific color, firmness and smell. ... Some seasonally available vegetables
+                    are: January - June: onions, potatoes, asparagus, greens, lettuce, peas, radishes, spinach and
+                    turnips. July- August: beans, beets, broccoli, carrots, cauliflower, cucumbers, zucchini, summer
+                    squash and corn.</p>
+            </div>
+            <div class="products-sec p2">
+                <img src="images/Project Cover8.png" alt="">
+                <h1>Food Items</h1>
+                <p> Food is the basic need for humans to stay alive. According to Abraham Maslow’s Hierarchy of Needs, a
+                    motivational psychological theory, Food is an innate physiological need along with water, warmth,
+                    and rest. This tells the importance of Food in everyone’s lives. Food is the need of every living
+                    organism. Therefore, we mustn’t waste Food.</p>
+            </div>
+
+            <div class="products-sec p2">
+                <img src="images/Project Cover7.png" alt="">
+                <h1>Orgnaic Fruits</h1>
+                <p>
+                    “You are what you eat”, or so they say. In today’s supermarkets, organic foods are everywhere. Not
+                    only are there organic fruits and vegetables, but there are also organic dairy products, organic
+                    meats, organic convenience foods, organic wine, beer, coffee, tea and even clothes made with organic
+                    cotton. All of these choices have made organic foods the “fastest-growing segment of the grocery
+                    industry.”
+                </p>
+            </div>
+
+        </div>
+
+
+    </section>
+
+    <section class="sign-up">
+        <div id="sign">
+            <a class="order-button" target="_blank" href="https://www.freelancer.com/u/Razaulevan">SIGN UP NOW</a>
+        </div>
+
+        <div id="signup">
+            <h3>Search Your Items</h3>
+            <input type="text" name="Email" id="input" placeholder="SEARCH.....">
+        </div>
+
+        </div>
+        <footer>
+
+            <h2> Companiganj Easy Shop
+                <h2>
+                    <small>You are what you eat | Be safe</small>
+
+        </footer>
+    </section>
 </body>
 
 </html>
